Fixed styling of hover button in dark mode

--- a/name.abuchen.portfolio.ui/css/shared/dark.css
+++ b/name.abuchen.portfolio.ui/css/shared/dark.css
@@ -28,6 +28,11 @@ CTabFolder {
 	background-color: #515658;
 }
 
+.hoverbutton Shell,
+.hoverbutton ImageHyperlink {
+	background-color: #302E30;
+}
+
 .chart {
 	background-color: #515658;
 	axis-color: #A0A0A0;
