--- a/name.abuchen.portfolio.ui/css/shared/light.css
+++ b/name.abuchen.portfolio.ui/css/shared/light.css
@@ -58,6 +58,11 @@ CTabItem:selected {
 	background-color: #ECECEC;
 }
 
+.hoverbutton Shell,
+.hoverbutton ImageHyperlink {
+	background-color: white;
+}
+
 .chart {
 	background-color: white;
 	axis-color: black;
